// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query tests query000: "* | count()" 1`] = `
Array [
  "count",
  "30",
]
`;

exports[`Query tests query001: "* | count() by _path | sort _path" 1`] = `
Array [
  "_path",
  "count",
  "capture_loss",
  "1",
  "conn",
  "19",
  "dns",
  "2",
  "files",
  "4",
  "ssl",
  "1",
  "stats",
  "1",
  "weird",
  "1",
  "x509",
  "1",
]
`;

exports[`Query tests query002: "_path=conn | count()" 1`] = `
Array [
  "count",
  "19",
]
`;

exports[`Query tests query003: "_path=conn | cut ts, id.orig_h, id.orig_p, id.resp_h, id.resp_p, proto | sort ts" 1`] = `
Array [
  "ts",
  "id.orig_h",
  "id.orig_p",
  "id.resp_h",
  "id.resp_p",
  "proto",
  "2020-02-25T16:03:05Z",
  "192.168.1.110",
  "56625",
  "172.217.9.142",
  "443",
  "tcp",
  "2020-02-25T16:03:06Z",
  "192.168.1.110",
  "57591",
  "172.217.9.142",
  "443",
  "tcp",
  "2020-02-25T16:03:07Z",
  "192.168.1.110",
  "55635",
  "18.246.31.137",
  "443",
  "tcp",
  "2020-02-25T16:03:07Z",
  "192.168.1.110",
  "55747",
  "13.52.5.22",
  "443",
  "tcp",
  "2020-02-25T16:03:08Z",
  "192.168.1.110",
  "55344",
  "52.37.243.173",
  "443",
  "tcp",
  "2020-02-25T16:03:08Z",
  "192.168.1.110",
  "55346",
  "52.37.243.173",
  "443",
  "tcp",
  "2020-02-25T16:03:08Z",
  "192.168.1.110",
  "57326",
  "173.194.201.189",
  "443",
  "tcp",
  "2020-02-25T16:03:08Z",
  "192.168.1.110",
  "57487",
  "192.30.253.125",
  "443",
  "tcp",
  "2020-02-25T16:03:08Z",
  "192.168.1.110",
  "55354",
  "52.37.243.173",
  "443",
  "tcp",
  "2020-02-25T16:03:09Z",
  "192.168.1.179",
  "47783",
  "192.168.1.255",
  "15600",
  "udp",
  "2020-02-25T16:03:10Z",
  "192.168.1.110",
  "57332",
  "64.233.179.189",
  "443",
  "tcp",
  "2020-02-25T16:03:10Z",
  "192.168.1.110",
  "55351",
  "18.205.93.211",
  "443",
  "tcp",
  "2020-02-25T16:03:11Z",
  "192.168.1.110",
  "54375",
  "192.168.1.254",
  "53",
  "udp",
  "2020-02-25T16:03:12Z",
  "192.168.1.110",
  "57635",
  "17.125.252.5",
  "443",
  "tcp",
  "2020-02-25T16:03:13Z",
  "192.168.1.110",
  "51848",
  "192.168.1.254",
  "53",
  "udp",
  "2020-02-25T16:03:13Z",
  "192.168.1.110",
  "57640",
  "209.216.230.240",
  "443",
  "tcp",
  "2020-02-25T16:03:15Z",
  "192.168.1.179",
  "51524",
  "192.168.1.255",
  "15600",
  "udp",
  "2020-02-25T16:03:15Z",
  "192.168.1.110",
  "57572",
  "172.217.6.138",
  "443",
  "tcp",
  "2020-02-25T16:03:15Z",
  "192.168.1.110",
  "57540",
  "172.217.1.138",
  "443",
  "tcp",
]
`;

exports[`Query tests query004: "* | every 2s count() | sort ts" 1`] = `
Array [
  "ts",
  "count",
  "2020-02-25T16:03:04Z",
  "2",
  "2020-02-25T16:03:06Z",
  "4",
  "2020-02-25T16:03:08Z",
  "6",
  "2020-02-25T16:03:10Z",
  "4",
  "2020-02-25T16:03:12Z",
  "4",
  "2020-02-25T16:03:14Z",
  "9",
  "2020-02-25T16:03:16Z",
  "1",
]
`;

exports[`Query tests query005: "* | every 2s count() by _path | sort ts, _path" 1`] = `
Array [
  "ts",
  "_path",
  "count",
  "2020-02-25T16:03:04Z",
  "conn",
  "1",
  "2020-02-25T16:03:04Z",
  "stats",
  "1",
  "2020-02-25T16:03:06Z",
  "conn",
  "3",
  "2020-02-25T16:03:06Z",
  "weird",
  "1",
  "2020-02-25T16:03:08Z",
  "conn",
  "6",
  "2020-02-25T16:03:10Z",
  "conn",
  "3",
  "2020-02-25T16:03:10Z",
  "dns",
  "1",
  "2020-02-25T16:03:12Z",
  "conn",
  "3",
  "2020-02-25T16:03:12Z",
  "dns",
  "1",
  "2020-02-25T16:03:14Z",
  "conn",
  "3",
  "2020-02-25T16:03:14Z",
  "files",
  "4",
  "2020-02-25T16:03:14Z",
  "ssl",
  "1",
  "2020-02-25T16:03:14Z",
  "x509",
  "1",
  "2020-02-25T16:03:16Z",
  "capture_loss",
  "1",
]
`;

exports[`Query tests query006: "_path=x509 or _path=ssl | sort _path" 1`] = `
Array [
  "2020-02-25T16:03:14Z",
  "ssl",
  "CeYm4A4XtVPVfF9wo6",
  "192.168.1.110",
  "57640",
  "209.216.230.240",
  "443",
  "TLSv12",
  "TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384",
  "secp256r1",
  "news.ycombinator.com",
  "F",
  "⦻",
  "http/1.1",
  "T",
  "FXkLzR25cwYgeI5yI7",
  "Frbo5s1CRsV02JUoSe",
  "F1VUER3CattO8PiHWc",
  "CN=news.ycombinator.com,O=Y Combinator\\\\, Inc.,L=San Francisco,ST=California,C=US",
  "CN=DigiCert SHA2 Secure Server CA,O=DigiCert Inc,C=US",
  "⦻",
  "⦻",
  "ok",
  "2020-02-25T16:03:14Z",
  "x509",
  "FXkLzR25cwYgeI5yI7",
  "3",
  "074FE902C6B7D619884E1CA1854D9178",
  "CN=news.ycombinator.com,O=Y Combinator\\\\, Inc.,L=San Francisco,ST=California,C=US",
  "CN=DigiCert SHA2 Secure Server CA,O=DigiCert Inc,C=US",
  "2019-07-08T07:00:00Z",
  "2021-09-10T19:00:00Z",
  "rsaEncryption",
  "sha256WithRSAEncryption",
  "rsa",
  "2,048",
  "65537",
  "⦻",
  "news.ycombinator.com",
  "F",
  "⦻",
]
`;
